+semantic html +dissmiss-message button's function +updated readme file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <main>
       <img alt="sign-up illustration image" />
       <div class="description">
         <h1>Stay updated</h1>
@@ -47,7 +47,7 @@
             value="Subscibe for monthly newsletter" />
         </form>
       </div>
-    </div>
+    </main>
     <script src="main.js"></script>
   </body>
 </html>
