+footer +updated style.css

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
         </form>
       </div>
     </main>
+    <footer>
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://www.frontendmentor.io/profile/yassine-ramla"
+        target="_blank"
+        >yassine-ramla</a
+      >.
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
