--- a/success.html
+++ b/success.html
@@ -30,6 +30,17 @@
       </p>
       <button onclick="location.assign('./index.html')">Dismiss message</button>
     </main>
+    <footer>
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://www.frontendmentor.io/profile/yassine-ramla"
+        target="_blank"
+        >yassine-ramla</a
+      >.
+    </footer>
     <script>
       const urlParams = new URLSearchParams(window.location.search);
       const email = urlParams.get("email");
